# wikipedia-revisions-server

./: .pre-commit-config.yaml  Cargo.toml  Dockerfile  LICENSE.txt  README.md
.github/workflows/: docker-image.yml  rust.yml
src/: download  main.rs
test_data/: generate_test_data.py  sample.csv
