[package]
name = "wikipedia-revisions-server"
version = "0.1.0"
authors = ["Dominic Burkart <1351120+DominicBurkart@users.noreply.github.com>"]
edition = "2018"

[dependencies]
clap = "2.33"
actix-web = "2.0"
csv = "1.1"
brotli = "3.3"
serde = "1.0"
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1"
