[package]
name = "wikipedia-revisions-server"
version = "0.1.0"
authors = ["Dominic Burkart <1351120+DominicBurkart@users.noreply.github.com>"]
edition = "2018"

[dependencies]
clap = "2"
actix-web = "2.0"
actix-rt = "1.0"
csv = "1.1"
brotli2 = "0.3"
serde = "1"
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
num_cpus = "1"
rayon = "1.3"
regex = "1"
tokio = { version = "0.2", features = ["full"] }
crossbeam = "0.7"
futures="0.3"
bytes="0.5"
lazy_static = "1"